--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,7 +38,7 @@
 }
 
 html {
-  background-color: #1d3557;
+  background-color: #a8dadc;
   color: #f1faee;
 }
 
@@ -56,9 +56,60 @@ body {
 }
 
 h2 {
-  text-align: center;
+  text-align: left;
   color: #1d3557;
   font-size: large;
+}
+
+select {
+  border-radius: 0.1rem;
+  min-width: 0;
+  width: 10rem;
+  height: 1.5rem;
+  margin-right: 1rem;
+  margin-left: 0.2rem;
+}
+
+input {
+  box-sizing: content-box;
+  padding-left: 0.2rem;
+  margin-right: 0.5rem;
+  min-width: 0;
+  min-height: 0;
+  display: flex;
+  flex-direction: row;
+  height: 1.5rem;
+}
+
+label {
+  padding-right: 0.2rem;
+}
+
+button {
+  font-size: large;
+  width: 10%;
+  height: 2rem;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.addButton {
+  height: 2rem;
+  width: 4rem;
+}
+
+.tableButton {
+  display: flex;
+  flex-direction: row;
+  height: 2rem;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5rem 2rem 0.5rem 2rem;
+}
+
+.tableForm {
+  display: flex;
+  flex-direction: row;
 }
 
 .name {
@@ -78,30 +129,24 @@ h2 {
   padding-left: 1rem;
 }
 
-select {
-  border-radius: 0.1rem;
-  width:10rem;
-}
-
-input {
-  box-sizing: content-box;
-  padding-left: 0.2rem;
-  min-width: 0;
+.summaryForm {
   display: flex;
   flex-direction: row;
-}
-
-label {
-  padding-right: 1rem;
-}
-
-button {
-  font-size: large;
-  width: 100%;
-  height: 2rem;
   justify-content: center;
-  align-items: flex-end;
-  margin-top: 1rem;
+}
+
+.summaryValue {
+  font-size: larger;
+  min-width: 0;
+  border: transparent;
+  background-color: transparent;
+}
+
+.value {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 1rem 1rem 1rem;
+  font-size: large;
 }
 
 button:hover {
@@ -110,16 +155,17 @@ button:hover {
 
 .container {
   display: flex;
-  align-content: stretch;
+  align-content: space-between;
   height: 90vh;
+  flex-wrap: wrap;
 }
 
 .tables {
   background-color: #a8dadc;
   flex: 1;
-  flex-grow: 1;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
+  height: 80vh;
 }
 
 .table {
@@ -132,32 +178,49 @@ button:hover {
   background-color: #a8dadc;
   color: #6e6b75;
   flex: 1;
-  height: 90vh;
-  align-items: stret   ch;
+  height: 80vh;
+  align-items: stretch;
   justify-content: center;
+  height: 80vh;
 }
 
 .chart {
   background-color: #f1faee;
   justify-content: center;
   align-items: center;
+  border-radius: 0.25rem;
   margin: 1rem;
 }
 
-.forms {
+.formsContainer {
+  background-color: #a8dadc;
+  flex-direction: column;
+  display: flex;
+  flex: 1;
+  height: 80vh;
+}
+
+.formElement {
+  background-color: #f1faee;
+  color: #1d3557;
+  border-radius: 0.25rem;
+  margin: 1rem 1rem 1rem 1rem;
+  padding: 1rem 1rem 1rem 1rem;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.formContent {
+  display: flex;
+  flex-direction: row;
+}
+
+.welcomePage {
+  display: flex;
   background-color: #a8dadc;
   align-items: stretch;
   justify-content: center;
   flex-direction: column;
-  flex: 1;
-  display: flex;
-}
-
-.form {
-  background-color: #f1faee;
-  color: #1d3557;
-  flex-direction: row;
-  margin: 1rem;
   flex: 1;
 }
 /* #e63946 #f1faee #a8dadc #457b9d #1d3557 */
